neutron-fwaas (2015.1.0-2) unstable; urgency=medium

  * Added --fail-missing for dh_install to avoid possible mistakes.
  * Packaging usr/etc/neutron/fwaas_driver.ini in /etc/neutron.

 -- Thomas Goirand <zigo@debian.org>  Thu, 04 Jun 2015 16:00:26 +0200

neutron-fwaas (2015.1.0-1) unstable; urgency=medium

  * New upstream release.

 -- Thomas Goirand <zigo@debian.org>  Sun, 03 May 2015 16:48:00 +0000

neutron-fwaas (2015.1~rc2-1) unstable; urgency=medium

  * Initial release. (Closes: #783590)

 -- Thomas Goirand <zigo@debian.org>  Thu, 26 Mar 2015 01:13:07 +0100