@@ -1,1 +1,0 @@
-usr/etc/neutron/fwaas_driver.ini	/etc/neutron
