@@ -8,7 +8,13 @@ UPSTREAM_GIT = git://github.com/openstack/neutron-fwaas.git
 PYTHONS:=$(shell pyversions -vr)
 
 %:
-	dh $@ --buildsystem=python_distutils --with python2,systemd
+	dh $@ --buildsystem=python_distutils --with python2
+
+override_dh_auto_install:
+	set -e && for pyvers in $(PYTHONS); do \
+		python$$pyvers setup.py install --install-layout=deb \
+			--root $(CURDIR)/debian/tmp; \
+	done
 
 override_dh_install:
 	dh_install -O--buildsystem=python_distutils --fail-missing -Xusr/etc/neutron/fwaas_driver.ini
@@ -37,9 +43,6 @@ override_dh_clean:
 	dh_clean
 	find . -type f -name "*.pyc" -delete
 	rm -rf build
-
-override_dh_install:
-	dh_install --fail-missing
 
 # Commands not to run
 override_dh_installcatalogs:
